[gd_scene load_steps=20 format=3 uid="uid://ctxddstc2vto8"]

[ext_resource type="Script" uid="uid://cchgyyhs27ppw" path="res://scripts/hud.gd" id="1_ahhtf"]
[ext_resource type="Texture2D" uid="uid://cesgf4gdxak83" path="res://assets/sprite assets/ui/redBorder.png" id="4_5pdws"]
[ext_resource type="Texture2D" uid="uid://cck5a75oy6yxe" path="res://assets/sprite assets/key icons/Keyboard & Mouse/Double/mouse_right.png" id="4_047uy"]
[ext_resource type="Theme" uid="uid://dm766vchyhueo" path="res://assets/styles/arm_selection.tres" id="4_mphia"]
[ext_resource type="FontFile" uid="uid://xo3e8r215r8p" path="res://assets/fonts/numberFont/Ethnocentric Rg.otf" id="6_0i1j5"]
[ext_resource type="Texture2D" uid="uid://or2ej7i2utos" path="res://assets/materials/pistol_bullet.tres" id="6_5pdws"]
[ext_resource type="Texture2D" uid="uid://cmgvv04tqig53" path="res://assets/sprite assets/gunmodel previews/black hole gun/black_hole_2.png" id="11_5n1hp"]
[ext_resource type="FontFile" uid="uid://dkbqwfkfiwoii" path="res://assets/fonts/numberFont/Ethnocentric Rg It.otf" id="12_apjy4"]

[sub_resource type="AtlasTexture" id="AtlasTexture_apjy4"]
atlas = ExtResource("6_5pdws")
region = Rect2(28, 22, 8, 20)

[sub_resource type="Animation" id="Animation_047uy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("OverclockBar/ProgressBar:value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [100.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RedBorder:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_5pdws"]
resource_name = "bar_charge_empty"
length = 10.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("OverclockBar/ProgressBar:value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 10),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [100.0, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RedBorder:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 8.9, 10),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 10),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"setOnState"
}, {
"args": [],
"method": &"setOffState"
}]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(10),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"startBarFill"
}]
}

[sub_resource type="Animation" id="Animation_uo2fv"]
resource_name = "bar_charge_fill"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("OverclockBar/ProgressBar:value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 100.0]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"barChargeSetReady"
}]
}

[sub_resource type="Animation" id="Animation_mphia"]
resource_name = "key_2_set_dark"

[sub_resource type="Animation" id="Animation_0m4u7"]
resource_name = "key_2_set_light"

[sub_resource type="Animation" id="Animation_apjy4"]
resource_name = "key_3_set_dark"

[sub_resource type="Animation" id="Animation_5n1hp"]
resource_name = "key_3_set_light"

[sub_resource type="Animation" id="Animation_uxdf7"]
resource_name = "key_4_set_dark"

[sub_resource type="Animation" id="Animation_5357l"]
resource_name = "key_4_set_light"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5pdws"]
_data = {
&"RESET": SubResource("Animation_047uy"),
&"bar_charge_empty": SubResource("Animation_5pdws"),
&"bar_charge_fill": SubResource("Animation_uo2fv"),
&"key_2_set_dark": SubResource("Animation_mphia"),
&"key_2_set_light": SubResource("Animation_0m4u7"),
&"key_3_set_dark": SubResource("Animation_apjy4"),
&"key_3_set_light": SubResource("Animation_5n1hp"),
&"key_4_set_dark": SubResource("Animation_uxdf7"),
&"key_4_set_light": SubResource("Animation_5357l")
}

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_ahhtf")
crosshair_width = 2.86
crosshair_spread = 3.02
crosshair_length = 8.685

[node name="CrosshairContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="CrosshairRIGHT" type="Line2D" parent="CrosshairContainer"]
points = PackedVector2Array(3.02, 0, 11.705, 0)
width = 2.86

[node name="CrosshairLEFT" type="Line2D" parent="CrosshairContainer"]
points = PackedVector2Array(-3.02, 0, -11.705, 0)
width = 2.86

[node name="CrosshairUP" type="Line2D" parent="CrosshairContainer"]
points = PackedVector2Array(0, -3.02, 0, -11.705)
width = 2.86

[node name="CrosshairDOWN" type="Line2D" parent="CrosshairContainer"]
points = PackedVector2Array(0, 3.02, 0, 11.705)
width = 2.86

[node name="RedBorder" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("4_5pdws")
expand_mode = 1

[node name="DebugContainer" type="VBoxContainer" parent="."]
layout_mode = 1
offset_right = 40.0
offset_bottom = 40.0

[node name="DebugTitle" type="Label" parent="DebugContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Debug Properties:"

[node name="==========" type="Label" parent="DebugContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "============================="

[node name="BodyHitDebug" type="Label" parent="DebugContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Last body hit: null"

[node name="CurrentPlayerState" type="Label" parent="DebugContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Current player state: NULL_STATE"

[node name="CurrentWeaponState" type="Label" parent="DebugContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Current weapon state: NULL_STATE"

[node name="CurrentActionState" type="Label" parent="DebugContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Curent action state: NULL_STATE"

[node name="CurrentLookDir" type="Label" parent="DebugContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Currently looking in: "

[node name="CurrentPlayerPos" type="Label" parent="DebugContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Current player pos: "

[node name="CurrentPlayerHealth" type="Label" parent="DebugContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Current player health: "

[node name="CurrentVelocity" type="Label" parent="DebugContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Current player velocity vector: "

[node name="CurrentMagnitude" type="Label" parent="DebugContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Current player velocity magnitude: "

[node name="CurrentMagnitudeXZ" type="Label" parent="DebugContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Current player velocity magnitude (XZ plane): "

[node name="fpsCounter" type="Label" parent="DebugContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 41
text = "FPS: 61.0"

[node name="==========2" type="Label" parent="DebugContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "============================="

[node name="versionText" type="Label" parent="."]
layout_mode = 0
offset_left = 962.0
offset_top = 625.0
offset_right = 1151.0
offset_bottom = 655.0
theme_override_font_sizes/font_size = 21
text = "ALPHA BUILD 0.9.8"

[node name="DebugShapesText" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -94.5
offset_right = 94.5
offset_bottom = 30.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 21
text = "DEBUG SHAPES: ENABLED"

[node name="BottomLeftArea" type="Control" parent="."]
clip_contents = true
layout_mode = 2
anchors_preset = 0
offset_top = 465.0
offset_right = 420.0
offset_bottom = 648.0

[node name="BackPanel" type="ColorRect" parent="BottomLeftArea"]
z_index = -1
layout_mode = 0
offset_right = 420.0
offset_bottom = 183.0
color = Color(0, 0, 0, 0.529412)

[node name="WeaponChoiceContainer" type="HBoxContainer" parent="BottomLeftArea"]
layout_mode = 0
offset_left = 7.0
offset_top = 8.0
offset_right = 1545.0
offset_bottom = 447.0
scale = Vector2(0.157344, 0.157344)

[node name="ArmChoiceContainer" type="VBoxContainer" parent="BottomLeftArea"]
layout_mode = 2
offset_left = 275.0
offset_top = 9.0
offset_right = 344.0
offset_bottom = 107.0
theme = ExtResource("4_mphia")

[node name="AmmoCounterContainer" type="BoxContainer" parent="BottomLeftArea"]
layout_mode = 0
offset_top = 103.0
offset_right = 420.0
offset_bottom = 183.0

[node name="ammoCounter" type="Label" parent="BottomLeftArea/AmmoCounterContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("6_0i1j5")
theme_override_font_sizes/font_size = 41
text = "35/35"

[node name="BulletControl" type="Control" parent="BottomLeftArea/AmmoCounterContainer"]
custom_minimum_size = Vector2(12.93, 0)
layout_mode = 2

[node name="BulletIcon" type="TextureRect" parent="BottomLeftArea/AmmoCounterContainer/BulletControl"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -5.5
offset_top = -14.0
offset_right = 5.5
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_apjy4")

[node name="BlackHoleControl" type="Control" parent="BottomLeftArea/AmmoCounterContainer"]
custom_minimum_size = Vector2(76.815, 0)
layout_mode = 2

[node name="BlackHoleIcon" type="TextureRect" parent="BottomLeftArea/AmmoCounterContainer/BlackHoleControl"]
layout_mode = 1
offset_right = 225.0
offset_bottom = 225.0
scale = Vector2(0.342352, 0.342352)
texture = ExtResource("11_5n1hp")

[node name="StatusEffectContainer" type="VBoxContainer" parent="BottomLeftArea"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -56.0
offset_bottom = 183.0
grow_horizontal = 0

[node name="BlackHoleCooldownContainer" type="VBoxContainer" parent="BottomLeftArea/StatusEffectContainer"]
layout_mode = 2
theme_override_constants/separation = 18

[node name="BlackHoleCooldownTimer" type="Label" parent="BottomLeftArea/StatusEffectContainer/BlackHoleCooldownContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.646292, 0.141552, 0.966634, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("12_apjy4")
theme_override_font_sizes/font_size = 20
text = "0.00s"

[node name="Control" type="Control" parent="BottomLeftArea/StatusEffectContainer/BlackHoleCooldownContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="TextureRect" type="TextureRect" parent="BottomLeftArea/StatusEffectContainer/BlackHoleCooldownContainer/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -28.0
offset_top = -28.0
offset_right = 28.0
offset_bottom = 28.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
texture = ExtResource("11_5n1hp")
expand_mode = 1

[node name="OverclockBar" type="Control" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -103.0
offset_top = -396.0
grow_horizontal = 0
grow_vertical = 0

[node name="MouseIcon" type="TextureRect" parent="OverclockBar"]
layout_mode = 0
offset_left = 41.0
offset_top = 12.0
offset_right = 81.0
offset_bottom = 52.0
texture = ExtResource("4_047uy")
expand_mode = 1

[node name="ProgressBar" type="ProgressBar" parent="OverclockBar"]
layout_mode = 2
offset_left = 47.0
offset_top = 58.0
offset_right = 77.0
offset_bottom = 373.0
value = 100.0
fill_mode = 3

[node name="Overclock" type="Label" parent="OverclockBar"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -27.0
offset_right = 307.0
offset_bottom = 23.0
grow_vertical = 0
rotation = -1.57079
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_fonts/font = ExtResource("12_apjy4")
theme_override_font_sizes/font_size = 36
text = "OVERCLOCK"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_5pdws")
}
